<resources>
    <string name="app_name">Parkro</string>
    <string name="title_map">지도</string>
    <string name="title_parkinglist">주차 내역</string>
    <string name="title_parking_detail">주차 상세 내역</string>
    <string name="title_payment">정산</string>
    <string name="title_mypage">마이페이지</string>
    <string name="title_receipt">영수증</string>
    <string name="title_barcode_scan">바코드 스캔</string>
    <string name="title_coupon">쿠폰</string>
    <string name="title_logout">로그아웃</string>
    <string name="title_payment_success">정산 성공</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_btn_payment_web">결제창 이동</string>

    <string name="title_example">테스트</string>
    <string name="title_parking_price_info">상품금액별 무료 주차 안내</string>
    <string name="content_parking_price_info">- 2만원 이상 구매 : 1시간\n- 3만원 이상 구매 : 2시간\n- 4만원 이상 구매 : 3시간\n- 6만원 이상 구매 : 5시간</string>

    <string name="title_btn_barcode">바코드 인식</string>

    <string name="title_discount_amount">결제 금액</string>
    <string name="title_discount_hours">차감 시간</string>
    <string name="default_value_payment">-</string>
    <string name="title_btn_register">등록하기</string>

    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_add_car">차량 등록</string>
    <string name="error_login_login_fe">아이디 혹은 비밀번호가 일치하지 않습니다.</string>

    <!-- 프론트엔드 회원가입 유효성 검사 에러 메시지-->
    <string name="error_signup_username_fe">영문 숫자 포함 6 ~ 12자이어야 합니다.</string>
    <string name="error_signup_password_fe">영문 대소문자, 숫자, 특수문자 포함 8 ~ 12자이어야 합니다.</string>
    <string name="error_signup_check_password_fe">비밀번호가 일치하지 않습니다.</string>
    <string name="error_signup_nickname_fe">닉네임은 필수 입력 값입니다.</string>
    <string name="error_signup_phone_number_fe">전화번호 형식은 "xxx-xxxx-xxxx"입니다.</string>

    <!-- 백엔드 회원가입 에러 메시지 -->
    <string name="error_signup_username_be">중복된 아이디 입니다.</string>
    <string name="error_signup_invalid_car_number_be">없는 차량 번호입니다.</string>
    <string name="error_signup_duplicated_car_number_be">이미 등록된 차량 번호입니다.</string>
    <string name="error_signup_phone_number_be">이미 등록된 전화 번호입니다.</string>

    <!-- 외부 api 에러 메시지 -->
    <string name="error_signup_server">잠시 후 다시 시도해 주세요.</string>

    <!-- payment -->
    <string name="formatted_parking_entrance_date">입차 yyyy.MM.dd HH:mm</string>
    <string name="btn_use_coupon">쿠폰 사용</string>
    <string name="btn_use_receipt">영수증 등록</string>

    <string name="title_parking_time">주차 시간</string>
    <string name="title_discount_coupon">쿠폰 할인</string>
    <string name="title_discount_receipt">영수증 할인</string>

    <string name="title_payment_time">정산 필요 시간</string>
    <string name="title_amount_payment">결제 금액</string>
    <string name="title_paymentby">결제 수단</string>
    <string name="formatted_payment_time">%1$d시간 %2$d분</string>
    <string name="formatted_discount_time">-%1$d시간 %2$d분</string>
    <string name="formatted_amount_payment">%1$,d원</string>
    <string name="default_value_time">-0시간 0분</string>

    <string name="btn_completed_payment">결제하기</string>
    <string name="btn_completed_payment_admin">결제 완료</string>

    <string name="title_empty_payment">정산할 차량 없음</string>
    <string name="content_empty_payment">현재 주차된 차량이 없습니다.</string>
    <string name="error_empty_parking_detail">주차 상세 내역이 없습니다.</string>
    <string name="content_completed_parking_delete">주차 내역이 삭제되었습니다.</string>
    <string name="content_dialog_parking_delete">주차 내역을 삭제하시겠습니까?</string>

    <string name="title_btn_use_coupon">사용하기</string>

    <string name="content_dialog_refresh">1분 이상 동작이 없어 새로고침합니다.</string>
    <string name="content_dialog_payment">정산 후 10분 내 미출차시\n 결제가 취소됩니다.</string>

    <string name="btn_move_to_payment">정산 페이지로 이동</string>
    <string name="title_payment_failure">앗, 결제에 실패했습니다.</string>

    <!-- coupon -->
    <string name="formatted_free_coupon_hour">%1$d시간 무료 주차권</string>
    <string name="formatted_coupon_expired_date">유효기간: yyyy.MM.dd 까지</string>
    <string name="default_free_coupon">시간 무료 주차권</string>
    <string name="default_expired_date">유효기간: 2999.12.31까지</string>
    <string name="formatted_coupon_count">총 %1d장</string>
    <string name="content_empty_coupon">조회된 쿠폰이 없습니다.</string>

    <!-- store -->
    <string name="btn_store_name_space1">스페이스원</string>
    <string name="btn_store_name_dongdaemoon">동대문점</string>
    <string name="btn_store_name_pangyo">판교점</string>
    <string name="btn_store_name_daegu">더현대 대구</string>

    <!-- parkinglot -->
    <string name="label_parkinglot_outside">외부</string>

    <!-- parkinglist -->
    <string name="label_parkinglist_pay_done">정산완료</string>
    <string name="label_parkinglist_exit_done">출차완료</string>
    <string name="error_parkinglist_not_found">주차 내역이 없습니다.</string>

    <string name="formatted_discount_hour">-%1s시간</string>

    <!-- common -->
    <string name="error_service_unavailable">현재 서비스 점검 중입니다.</string>
    <string name="error_user_not_found">존재하지 않는 유저입니다.</string>

    <string name="title_logout_modal">로그아웃 하시겠습니까?</string>
    <string name="title_delete_user_modal">회원탈퇴 하시겠습니까?</string>
    <string name="title_delete_car_modal">차량을 삭제 하시겠습니까?</string>

    <!-- mypage -->
    <string name="contents_mypage_1">차량 번호를 잘못 등록할 경우 주차 정산이 정상적으로 진행되지 않을 수 있습니다.</string>
    <string name="contents_mypage_2">차량은 1대 등록 가능합니다.</string>
</resources>
