<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">
    <!-- Fragment 시작 위치 -->
<!--    app:startDestination="@+id/navigation_example">-->

    <fragment
        android:id="@+id/navigation_coupon"
        android:name="com.parkro.client.domain.payment.ui.CouponFragment"
        android:label="@string/title_coupon"
        tools:layout="@layout/fragment_coupon" />

    <fragment
        android:id="@+id/navigation_barcode_scan"
        android:name="com.parkro.client.domain.payment.ui.BarcodeScanFragment"
        android:label="@string/title_barcode_scan"
        tools:layout="@layout/fragment_barcode_scan" />

    <fragment
        android:id="@+id/navigation_receipt"
        android:name="com.parkro.client.domain.payment.ui.ReceiptFragment"
        android:label="@string/title_receipt"
        tools:layout="@layout/fragment_receipt" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.parkro.client.domain.map.ui.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_example"
        android:name="com.parkro.client.domain.example.ui.ExampleFragment"
        android:label="@string/title_example"
        tools:layout="@layout/fragment_example" />

    <fragment
        android:id="@+id/navigation_parkinglist"
        android:name="com.parkro.client.domain.parkinglist.ui.ParkingListFragment"
        android:label="@string/title_parkinglist"
        tools:layout="@layout/fragment_parkinglist">
        <action
            android:id="@+id/action_parkingListFragment_to_parkingDetailFragment"
            app:destination="@id/navigation_parkingdetail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_parkingdetail"
        android:name="com.parkro.client.domain.parkinglist.ui.ParkingDetailFragment"
        android:label="@string/title_parking_detail"
        tools:layout="@layout/fragment_parking_detail" />

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.parkro.client.domain.payment.ui.PaymentFragment"
        android:label="@string/title_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.parkro.client.domain.mypage.ui.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />

</navigation>