<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="62dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_coupon_value_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/default_value_payment"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_coupon_list"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        app:layout_constraintTop_toBottomOf="@id/text_coupon_value_count"
        app:layout_constraintBottom_toTopOf="@id/btn_coupon_use"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_coupon_use"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_large_background"
        android:text="@string/title_btn_use_coupon"
        android:textColor="@color/parkro_white"
        app:layout_constraintTop_toBottomOf="@id/recyclerview_coupon_list"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/layout_coupon_empty_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="56dp"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/img_coupon_car_gone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_car_gone" />

        <TextView
            android:id="@+id/text_coupon_car_gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/parkro_black"
            android:text="@string/content_empty_coupon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
